--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,218 @@
 * {
-    
+  margin: 0px;
+  padding: 0px;
+}
+
+:root {
+  --color-primary: hsl(0, 0%, 100%);
+  --color-secondary: hsl(0, 0%, 0%);
+  --color-accent: hsl(212, 100%, 51%);
+  --color-tertiary: hsl(0, 0%, 51%);
+
+  --font-primary: "Nunito Sans";
+  --font-secondary: "Montserrat";
+  --font-regular: 400;
+  --font-medium: 500;
+  --font-semibold: 600;
+  --font-bold: 700;
+  --font-ultrabold: 800;
+  --font-8: 0.5rem;
+  --font-12: 0.75rem;
+  --font-14: 0.875rem;
+  --font-16: 1rem;
+  --font-20: 1.25rem;
+  --font-24: 1.5rem;
+  --font-100: 6.25rem;
+
+  --nav-color: hsl(0, 0%, 21%);
+  --sun-card: linear-gradient(
+    to bottom,
+    hsl(198, 55%, 83%),
+    hsl(198, 68%, 52%)
+  );
+  --cloud-card: linear-gradient(to bottom, hsl(0, 0%, 62%), hsl(198, 37%, 14%));
+  --rain-card: linear-gradient(
+    to bottom,
+    hsl(198, 80%, 20%),
+    hsl(198, 50%, 10%)
+  );
+
+  --nav-shadow: drop-shadow(4px 4px 10px hsl(212, 100%, 51%));
+  --normal-shadow: drop-shadow(5px 5px 10px hsla(0, 0%, 0%, 0.5));
+}
+.dark-theme {
+  --color-primary: hsl(0, 0%, 0%);
+  --color-secondary: hsl(0, 0%, 100%);
+  --color-accent: hsl(212, 100%, 25%);
+  --color-tertiary: hsl(0, 0%, 75%);
+}
+.dark-theme .buttons .mode #light:hover {
+  color: var(--color-secondary);
+  transition: color 300ms ease;
 }
 
 html {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+  box-sizing: border-box;
+}
+body {
+  background-color: var(--color-primary);
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+/* Nav Bar */
+nav {
+  position: sticky;
+  top: 1%;
+  display: flex;
+  justify-content: center;
+}
+nav .container {
+  z-index: 10;
+  width: 25rem;
+  margin: 2rem auto;
+  background-color: var(--nav-color);
+  border-radius: 10px;
+  filter: var(--nav-shadow);
+}
+nav .container .items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+nav .container .items a {
+  color: var(--color-tertiary);
+  font-family: var(--font-secondary);
+  font-weight: var(--font-medium);
+  font-size: var(--font-14);
+  text-decoration: none;
+}
+nav .container .items a:hover {
+  color: var(--color-primary);
+  transform: translateY(-1px) scale(1.05);
+  transition: transform 200ms ease-in;
+}
+nav .container .items .cta {
+  background-color: white;
+  color: var(--color-accent);
+  padding: 8px 16px;
+  border-radius: 8px;
+  font-weight: var(--font-semibold);
+  filter: drop-shadow(0px 0px 10px var(--color-accent));
+}
+nav .container .items .cta:hover {
+  color: var(--color-secondary);
+  background-color: rgb(223, 223, 223);
+  transform: translateY(-0.5px) scale(1.03);
+  transition: transform 200ms ease-in;
+}
+
+/* Hero */
+
+main {
+  display: flex;
+  justify-content: flex-end;
+}
+
+main .banner {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  margin-right: 100px;
+}
+main .banner h1 {
+  color: var(--color-secondary);
+  font-family: var(--font-primary);
+  font-size: var(--font-100);
+  line-height: 80px;
+  margin-bottom: 60px;
+}
+main .banner p {
+  color: var(--color-tertiary);
+  font-family: var(--font-primary);
+  font-size: var(--font-24);
+}
+
+.photos {
+  margin-left: 100px;
+}
+main .photos .top {
+  position: relative;
+  left: 10%;
+  width: 40vw;
+  height: 377px;
+  object-fit: cover;
+  border-radius: 20px;
+  transform: rotate(-7deg);
+  z-index: -3;
+  filter: var(--normal-shadow);
+}
+main .photos .bottom {
+  position: relative;
+  left: 10%;
+  top: -10%;
+  width: 45vw;
+  height: 337px;
+  object-fit: cover;
+  border-radius: 20px;
+  transform: rotate(7deg);
+  z-index: -2;
+  filter: var(--normal-shadow);
+}
+
+.buttons .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.buttons .mode {
+  display: flex;
+  margin-left: 40px;
+  border: 2px dotted var(--color-accent);
+  border-radius: 20px;
+  font-family: var(--font-primary);
+  font-size: var(--font-20);
+  font-weight: var(--font-bold);
+}
+.buttons .mode #dark {
+  cursor: pointer;
+  position: relative;
+  padding: 12px 14px;
+  color: var(--color-tertiary);
+}
+.buttons .mode #dark:hover {
+  color: var(--color-secondary);
+  transition: color 300ms ease;
+}
+.buttons .mode #light {
+  cursor: pointer;
+  padding: 12px 14px;
+}
+.buttons .mode #light:hover {
+  color: var(--color-secondary);
+  transition: color 300ms ease;
+}
+
+.scroll {
+  display: flex;
+  align-items: center;
+}
+.scroll p {
+  font-family: var(--font-secondary);
+  font-weight: var(--font-regular);
+  font-size: var(--font-16);
+  color: var(--color-tertiary);
+}
+.scroll .fa-solid {
+  margin: 0px 28px 0px 10px;
+  padding: 25px;
+  border-radius: 10px;
+  color: var(--color-primary);
+  background-color: var(--color-secondary);
+  filter: var(--normal-shadow);
+}
+.scroll .fa-solid:hover {
+  cursor: pointer;
+  transform: scale(1.04) translateY(-2px);
+  transition: transform 200ms ease;
 }
