--- a/project/public/index.css
+++ b/project/public/index.css
@@ -65,9 +65,9 @@
 
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 body {
   background-color: var(--color-primary);
   transition: background-color 0.5s ease, color 0.5s ease;
 }
-
